// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cloudformation create stack template input set should render with basic data 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-bottom-small"
              style="width: 120px;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                cd.cloudFormation.templateFile
              </p>
            </div>
          </div>
        </form>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test cloudformation create stack template input set should render with no data 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-bottom-small"
              style="width: 120px;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                cd.cloudFormation.templateFile
              </p>
            </div>
          </div>
        </form>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test cloudformation create stack template input set should render with runtime data 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="formGroup sm"
            >
              <div
                class="bp3-form-group"
                data-id="timeout-0"
              >
                <label
                  class="bp3-label"
                  for="timeout"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="wrapperComponentTestForm_timeout"
                  >
                    pipelineSteps.timeoutLabel
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="flex-grow: 1;"
                  >
                    <div
                      class="bp3-input-group bp3-fill"
                    >
                      <input
                        class="bp3-input"
                        name="timeout"
                        placeholder="Enter w/d/h/m/s/ms"
                        type="text"
                        value="10m"
                      />
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="formGroup md"
            >
              <div
                class="bp3-form-group"
                data-id="test.spec.provisionerIdentifier-1"
              >
                <label
                  class="bp3-label"
                  for="test.spec.provisionerIdentifier"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="wrapperComponentTestForm_test.spec.provisionerIdentifier"
                  >
                    pipelineSteps.provisionerIdentifier
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="test.spec.provisionerIdentifier"
                        type="text"
                        value=""
                      />
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-bottom-small"
              style="width: 120px;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                cd.cloudFormation.templateFile
              </p>
            </div>
            <div
              class="formGroup md"
            >
              <div
                class="bp3-form-group"
                data-id="test.spec.configuration.stackName-2"
              >
                <label
                  class="bp3-label"
                  for="test.spec.configuration.stackName"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="wrapperComponentTestForm_test.spec.configuration.stackName"
                  >
                    cd.cloudFormation.stackName
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="test.spec.configuration.stackName"
                        type="text"
                        value=""
                      />
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test cloudformation create stack template input set should render with runtime data and make aws statues api request 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-bottom-small"
              style="width: 120px;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                cd.cloudFormation.templateFile
              </p>
            </div>
            <div
              class="Layout--vertical StyledProps--main"
            >
              <label
                class="Label--main"
              >
                cd.cloudFormation.continueStatus
              </label>
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="width: 500px;"
              >
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            placeholder="- Select -"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test cloudformation create stack template input set should render with runtime data and make capabilities api request 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-bottom-small"
              style="width: 120px;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                cd.cloudFormation.templateFile
              </p>
            </div>
            <div
              class="Layout--vertical StyledProps--main"
            >
              <label
                class="Label--main"
              >
                cd.cloudFormation.specifyCapabilities
              </label>
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="width: 500px;"
              >
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            placeholder="- Select -"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test cloudformation create stack template input set should render with runtime data and make connector api request 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="formGroup md"
            >
              <div
                class="connectorLabel"
                style="margin-bottom: 10px;"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="margin-bottom: 5px;"
                >
                  <span
                    class="Tooltip--acenter bp3-label"
                    data-tooltip-id="wrapperComponentTestForm_test.spec.configuration.connectorRef"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey900"
                    >
                      pipelineSteps.awsConnectorLabel
                    </p>
                  </span>
                </div>
                <div
                  style="display: flex; align-items: center;"
                >
                  <div
                    class="bp3-form-group"
                    data-id="undefined-0"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                        style="width: 300px;"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                          data-testid="cr-field-test.spec.configuration.connectorRef"
                          style="width: 300px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="placeholder"
                            >
                              select
                            </span>
                          </span>
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                        <span
                          class="bp3-popover-wrapper MultiTypeInput--wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="MultiTypeInput--btn MultiTypeInput--FIXED"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-bottom-small"
              style="width: 120px;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                cd.cloudFormation.templateFile
              </p>
            </div>
          </div>
        </form>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test cloudformation create stack template input set should render with runtime data and make region api request 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="formGroup sm"
            >
              <div
                class="bp3-form-group"
                data-id="test.spec.configuration.region-0"
              >
                <label
                  class="bp3-label"
                  for="test.spec.configuration.region"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="wrapperComponentTestForm_test.spec.configuration.region"
                  >
                    regionLabel
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="test.spec.configuration.region"
                            placeholder="pipeline.regionPlaceholder"
                            style="padding-right: 0px;"
                            type="text"
                            value="GovCloud (US-West)"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                      <div
                        class="bp3-overlay bp3-overlay-inline"
                      >
                        <div
                          class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                          style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
                        >
                          <div
                            class="bp3-popover bp3-minimal bp3-select-popover"
                          >
                            <div
                              class="bp3-popover-content"
                            >
                              <div>
                                <ul
                                  class="bp3-menu"
                                >
                                  <li
                                    class="Select--menuItem Select--active"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      GovCloud (US-West)
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      GovCloud (US-East)
                                    </p>
                                  </li>
                                </ul>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-bottom-small"
              style="width: 120px;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                cd.cloudFormation.templateFile
              </p>
            </div>
          </div>
        </form>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test cloudformation create stack template input set should render with runtime data and make role api request 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-bottom-small"
              style="width: 120px;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                cd.cloudFormation.templateFile
              </p>
            </div>
            <div
              class="formGroup sm"
            >
              <div
                class="bp3-form-group"
                data-id="test.spec.configuration.roleArn-0"
              >
                <label
                  class="bp3-label"
                  for="test.spec.configuration.roleArn"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="wrapperComponentTestForm_test.spec.configuration.roleArn"
                  >
                    connectors.awsKms.roleArnLabel
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="test.spec.configuration.roleArn"
                            placeholder="select"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test cloudformation create stack template input set should render with runtime data show tags component 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-bottom-small"
              style="width: 120px;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                cd.cloudFormation.templateFile
              </p>
            </div>
            <div
              class="formGroup md"
            >
              <div
                class="bp3-form-group"
                data-id="test.spec.configuration.tags.spec.content-0"
              >
                <label
                  class="bp3-label"
                  for="test.spec.configuration.tags.spec.content"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="wrapperComponentTestForm_test.spec.configuration.tags.spec.content"
                    >
                      tagsLabel
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon fixed"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="monacoWrapper"
                  >
                    <button
                      class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main expandBtn Button--with-current-color Button--iconOnly Button--withLeftIcon"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                        icon="fullscreen"
                      >
                        <svg
                          data-icon="fullscreen"
                          height="10"
                          viewBox="0 0 16 16"
                          width="10"
                        >
                          <desc>
                            fullscreen
                          </desc>
                          <path
                            d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <div
                      class="main"
                    >
                      <textarea
                        name="test.spec.configuration.tags.spec.content"
                      >
                        [ { key: 'value' }, { keyTwo: 'value two' } ]
                      </textarea>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </form>
  </div>
</div>
`;
